[gd_scene load_steps=6 format=3 uid="uid://cfkfxl8h7lxnx"]

[ext_resource type="Script" uid="uid://d27x87ltwinwb" path="res://scenes/main.gd" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://cjdqy37jfat77" path="res://assets/models/world/world.tscn" id="2_0wfyh"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_0wfyh"]
sky_top_color = Color(0, 0, 0, 1)
sky_horizon_color = Color(0, 0, 0, 1)
ground_bottom_color = Color(0, 0, 0, 1)
ground_horizon_color = Color(0, 0, 0, 1)

[sub_resource type="Sky" id="Sky_sugp2"]
sky_material = SubResource("ProceduralSkyMaterial_0wfyh")

[sub_resource type="Environment" id="Environment_jyhfs"]
sky = SubResource("Sky_sugp2")
ambient_light_source = 1
reflected_light_source = 1

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o5qli")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="Scene3D" type="Node3D" parent="SubViewportContainer/SubViewport"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport/Scene3D"]
environment = SubResource("Environment_jyhfs")

[node name="WorldScene" parent="SubViewportContainer/SubViewport/Scene3D" instance=ExtResource("2_0wfyh")]

[node name="ClientController" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ClientConnectInfo" type="Label" parent="ClientController"]
layout_mode = 0
offset_left = 32.0
offset_top = 16.0
offset_right = 165.0
offset_bottom = 40.0
text = "Client disconnect"

[node name="ClientConnectButton" type="Button" parent="ClientController"]
layout_mode = 0
offset_left = 32.0
offset_top = 56.0
offset_right = 136.0
offset_bottom = 88.0
text = "CONNECT"

[editable path="SubViewportContainer/SubViewport/Scene3D/WorldScene"]
